[package]
name = "uds_rw"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = { version = "1" }
enum-repr-derive = "0.2.0"
pretty-hex = "0.4.1"
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0.61"
